// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test of component of Home Home component initial renders without initial props 1`] = `
<div
  className="App"
>
  <div
    className="search"
    data-test="searchContainer"
  >
    <span
      className="ant-input-search search__input ant-input-affix-wrapper"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <input
        className="ant-input"
        data-test="searchInput"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Wallpapers"
        style={null}
        type="text"
        value="wallpapers"
      />
      <span
        className="ant-input-suffix"
      >
        <i
          aria-label="icon: search"
          className="anticon anticon-search ant-input-search-icon"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="search"
            fill="currentColor"
            focusable="false"
            height="1em"
            key="svg-search"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              key="svg-search-svg-0"
            />
          </svg>
        </i>
      </span>
    </span>
  </div>
  <ul
    className="nav-top"
    data-test="navTop"
  />
  <ul
    className="photo-card-list"
    data-test="photoCardList"
  />
  <div
    className="cards__text-empty"
    data-test="cardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Test action methods  Test \`filterItemValueAction\` actions 1`] = `
<div
  className="App"
>
  <div
    className="search"
    data-test="searchContainer"
  >
    <span
      className="ant-input-search search__input ant-input-affix-wrapper"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <input
        className="ant-input"
        data-test="searchInput"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Wallpapers"
        style={null}
        type="text"
        value="wallpapers"
      />
      <span
        className="ant-input-suffix"
      >
        <i
          aria-label="icon: search"
          className="anticon anticon-search ant-input-search-icon"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="search"
            fill="currentColor"
            focusable="false"
            height="1em"
            key="svg-search"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              key="svg-search-svg-0"
            />
          </svg>
        </i>
      </span>
    </span>
  </div>
  <ul
    className="nav-top"
    data-test="navTop"
  >
    <li
      className="nav-top__item "
      data-test="navTopItem"
      key="0"
    >
      <div
        className="ant-tag ant-tag-purple"
        data-test="navTopItemTag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Editorial
      </div>
    </li>
    <li
      className="nav-top__item nav-top__item_border-right"
      data-test="navTopItem"
      key="1"
    >
      <div
        className="ant-tag"
        data-test="navTopItemTag"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        Following
      </div>
    </li>
  </ul>
  <ul
    className="photo-card-list"
    data-test="photoCardList"
  />
  <div
    className="cards__text-empty"
    data-test="cardsTextEmpty"
  >
    No images were found for your request. Try to find more.
  </div>
  <div
    className="pagination"
    data-test="pagination"
  />
</div>
`;

exports[`Test of component of Home Test action methods  Test \`filterItemValueAction\` actions 2`] = `
Array [
  "",
  "",
]
`;

exports[`Test of component of Home Test action methods  Test \`searchTextAction\` and \`searchChangeInputValueAction\` actions 1`] = `
<div
  className="search"
  data-test="searchContainer"
>
  <span
    className="ant-input-search search__input ant-input-affix-wrapper"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="ant-input"
      data-test="searchInput"
      disabled={false}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Wallpapers"
      style={null}
      type="text"
      value="wallpapers"
    />
    <span
      className="ant-input-suffix"
    >
      <i
        aria-label="icon: search"
        className="anticon anticon-search ant-input-search-icon"
        onClick={[Function]}
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          key="svg-search"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
            key="svg-search-svg-0"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`Test of component of Home Test component \`Home\` with diff props  test \`cards\`  1`] = `
<ul
  className="photo-card-list"
  data-test="photoCardList"
>
  <li
    className="photo-card-list__item"
    data-test="photoCardListItem"
    key="1"
  >
    <div
      className="photo-card"
      data-test="photoCard"
    >
      <a
        data-test="photoCardPhotoLink"
        href="/photo/1"
        onClick={[Function]}
      >
        <img
          alt="image"
          className="photo-card__img"
          data-test="photoCardImg"
          src="https://images.unsplash.com/photo-1558981408-db0ecd8a1ee4?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjQzODA4fQ"
        />
      </a>
      <div
        className="photo-card__autor photo-card-autor"
        data-test="photoCardAutor"
      >
        <a
          className="photo-card-autor__link"
          data-test="photoCardAutorLink"
          href="/users/harleydavidson"
          onClick={[Function]}
        >
          <img
            alt="harleydavidson"
            className="photo-card-autor__avatar"
            data-test="photoCardAutorAvatar"
            src="https://images.unsplash.com/profile-1556751276456-1561737ea797?ixlib=rb-1.2.1&q=80&fm=jpg&crop=faces&cs=tinysrgb&fit=crop&h=128&w=128"
          />
          <span
            className="photo-card-autor__name"
            data-test="photoCardAutorName"
          >
            Harley-Davidson
          </span>
        </a>
      </div>
      <p
        className="photo-card__desc"
        data-test="photoCardDesc"
      />
      <div
        className="photo-card__badge-container photo-card-badge"
        data-test="photoCardBadge"
      >
        <div
          className="ant-tag tag"
          data-test="tag"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          motorcycle
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test of component of Home Test component \`Home\` with diff props  test \`cardsTextEmpty\` with totalCards\`  1`] = `null`;

exports[`Test of component of Home Test component \`Home\` with diff props  test \`cardsTextEmpty\` with totalCards\` > \`cardsData.per_page\` 1`] = `
<div
  className="pagination"
  data-test="pagination"
/>
`;

exports[`Test of component of Home Test component \`Home\` with diff props  test \`photolistingRequestError\` true 1`] = `
<div
  className="error-text"
  data-test="errorText"
>
  Error loading photolisting
</div>
`;

exports[`Test of component of Home Test component \`Home\` with diff props  test spinner with \`isListingLoading\` true  1`] = `
<Memo()
  className="spinner"
  data-test="spinner"
>
  <div
    className="site-spinner"
  >
    <div
      className="lds-ring"
    >
      <div>
         
      </div>
      <div>
         
      </div>
      <div>
         
      </div>
      <div>
         
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Test of component of Home Test component \`Home\` with diff props  with \`filters\` data  1`] = `
<ul
  className="nav-top"
  data-test="navTop"
>
  <li
    className="nav-top__item "
    data-test="navTopItem"
    key="0"
  >
    <div
      className="ant-tag ant-tag-purple"
      data-test="navTopItemTag"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      Editorial
    </div>
  </li>
  <li
    className="nav-top__item nav-top__item_border-right"
    data-test="navTopItem"
    key="1"
  >
    <div
      className="ant-tag"
      data-test="navTopItemTag"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      Following
    </div>
  </li>
</ul>
`;
